fix(connectionline): set overflow visible

--- a/packages/system/src/styles/init.css
+++ b/packages/system/src/styles/init.css
@@ -129,6 +129,7 @@
 
 .xy-flow__connectionline {
   z-index: 1001;
+  overflow: visible;
 }
 
 .xy-flow__nodes {
